# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "redis-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
anyhow = "1.0.98"                                   # error handling
atoi = "2.0.0"
bytes = "1.10.1"                                     # helps manage buffers
clap = { version = "4.5.39", features = ["derive"] }
hex = "0.4.3"
thiserror = "2.0.12"                                # error handling
tokio = { version = "1.45.1", features = ["full"] } # async networking
