# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "redis-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
anyhow = "1.0.98"                                   # error handling
async-stream = "0.3.6"
atoi = "2.0.0"
bytes = "1.10.1"                                     # helps manage buffers
clap = { version = "4.5.39", features = ["derive"] }
digest = "0.10.7"
sha2 = "0.10"
hex = "0.4.3"
libc = "0.2.177"
thiserror = "2.0.12"                                # error handling
tokio = { version = "1.45.1", features = ["full"] } # async networking
tokio-stream = "0.1.17"
